user done, fixes
